--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "build-css": "tailwind build src/assets/tailwind.css -o src/assets/app.css"
   },
   "dependencies": {
+    "highcharts": "^10.0.0",
+    "highcharts-vue": "^1.4.0",
+    "vite": "^6.0.1",
     "vue": "^3.5.13",
-    "vue-router": "^4.4.5",
-    "vite": "^6.0.1"
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@eslint/js": "^8.57.1",
